apps/oxlint/src/snapshots/fixtures__cli__valid_complex_config_@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/cli/valid_complex_config
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 0 files with 25 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
