apps/oxlint/src/snapshots/fixtures__cli__valid_config_rules_with_dummy_config_@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/cli/valid_config_rules_with_dummy_config
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 1 file with 5 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
